@@ -1,3 +1,11 @@
+Sun Feb 24 20:31:59 UTC 2008 / Arjen de Korte <arjen@de-korte.org>
+
+ - driver/mge-xml.c: Add manufacturer string if we succesfully parsed
+   the '/mgeups/product.xml' page.
+ - driver/netxml-ups.c: Supply user credentials when logging into the
+   UPS. Not functional, since we have no functionality that needs this
+   (yet).
+
 Sun Feb 24 19:56:54 UTC 2008 / Arjen de Korte <arjen@de-korte.org>
 
  - common/serial.c: Cleanup some of the serial I/O functions (no
